// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align.jsx 1`] = `
<DocumentFragment>
  <div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-row t-form-item__labelAlign"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label>
            对齐方式
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-radio-group t-radio-group-solid t-radio-group-medium"
            >
              <label
                class="t-radio-button"
              >
                <input
                  class="t-radio-button__former"
                  readonly=""
                  type="radio"
                  value="left"
                />
                <span
                  class="t-radio-button__input"
                />
                <span
                  class="t-radio-button__label"
                >
                  左对齐
                </span>
              </label>
              <label
                class="t-radio-button"
              >
                <input
                  class="t-radio-button__former"
                  readonly=""
                  type="radio"
                  value="right"
                />
                <span
                  class="t-radio-button__input"
                />
                <span
                  class="t-radio-button__label"
                >
                  右对齐
                </span>
              </label>
              <label
                class="t-radio-button"
              >
                <input
                  class="t-radio-button__former"
                  readonly=""
                  type="radio"
                  value="top"
                />
                <span
                  class="t-radio-button__input"
                />
                <span
                  class="t-radio-button__label"
                >
                  顶部对齐
                </span>
              </label>
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__name"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label>
            名字
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__password"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label>
            密码
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-row t-form-item__name"
      >
        <div
          class="t-col t-form__label t-form__label--colon t-form__label--right t-col-1"
        >
          <label>
            姓名
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__tel"
      >
        <div
          class="t-col t-form__label t-form__label--colon t-form__label--right t-col-1"
        >
          <label>
            手机号
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__gender"
      >
        <div
          class="t-col t-form__label t-form__label--colon t-form__label--right t-col-1"
        >
          <label>
            性别
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-radio-group t-radio-group-outline t-radio-group-medium"
            >
              <label
                class="t-radio"
              >
                <input
                  class="t-radio__former"
                  name="male"
                  readonly=""
                  type="radio"
                  value=""
                />
                <span
                  class="t-radio__input"
                />
                <span
                  class="t-radio__label"
                >
                  男性
                </span>
              </label>
              <label
                class="t-radio"
              >
                <input
                  class="t-radio__former"
                  name="female"
                  readonly=""
                  type="radio"
                  value=""
                />
                <span
                  class="t-radio__input"
                />
                <span
                  class="t-radio__label"
                >
                  女性
                </span>
              </label>
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__course"
      >
        <div
          class="t-col t-form__label t-form__label--colon t-form__label--right t-col-1"
        >
          <label>
            课程
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-form-check-group"
            >
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  name="la"
                  readonly=""
                  type="checkbox"
                  value=""
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  加辣
                </span>
              </label>
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  name="ma"
                  readonly=""
                  type="checkbox"
                  value=""
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  加麻
                </span>
              </label>
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  name="nocong"
                  readonly=""
                  type="checkbox"
                  value=""
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  不要葱花
                </span>
              </label>
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__status"
      >
        <div
          class="t-col t-form__label t-form__label--colon t-form__label--right t-col-1"
        >
          <label
            for="status"
          >
            状态
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-switch"
              role="switch"
              type="button"
            >
              <span
                class="t-switch__handle"
              />
              <div
                class="t-switch__content"
              />
            </button>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__undefined"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label />
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              type="submit"
              value=""
            >
              提交
            </button>
            <button
              class="t-button t-button--theme-default t-button--variant-base"
              style="margin-left: 12px;"
              type="reset"
              value=""
            >
              重置
            </button>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`customValidator.jsx 1`] = `
<DocumentFragment>
  <div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-row t-form-item__account"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            用户名
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__password"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            密码
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__rePassword"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            确认密码
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__undefined"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label />
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="margin-right: 10px;"
              type="submit"
              value=""
            >
              提交
            </button>
            <button
              class="t-button t-button--theme-default t-button--variant-base"
              type="reset"
              value=""
            >
              重置
            </button>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`layout.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-row t-row-start t-row-top"
      style="margin: 0px -0px 16px -0px;"
    >
      <div
        class="t-radio-group t-radio-group-solid t-radio-group-medium"
      >
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="vertical"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            纵向布局
          </span>
        </label>
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            checked=""
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="inline"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            行内布局
          </span>
        </label>
      </div>
    </div>
    <form
      class="t-form-inline"
    >
      <div
        class="t-form__item t-row t-form-item__name"
      >
        <div
          class="t-col t-form__label t-form__label--top"
        >
          <label>
            名字
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__password"
      >
        <div
          class="t-col t-form__label t-form__label--top"
        >
          <label>
            密码
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`login.jsx 1`] = `
<DocumentFragment>
  <div
    style="width: 350px;"
  >
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-row t-form-item__account"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
          style="min-width: 0px;"
        >
          <label />
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input t-input--prefix"
            >
              <span
                class="t-input__prefix"
              >
                <svg
                  class="t-icon t-icon-desktop"
                  version="1.1"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M832 192C867.3462208 192 896 220.653776 896 256L896 640C896 675.3462208 867.3462208 704 832 704L544.896 704 544.9406656 768 768 768 768 832 256 832 256 768 480.9406656 768 480.896 704 192 704C156.653776 704 128 675.3462208 128 640L128 256C128 220.653776 156.653776 192 192 192L832 192ZM832 256L192 256 192 640 832 640 832 256Z"
                    fill-opacity=".9"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <input
                class="t-input__inner"
                placeholder="请输入账户名"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__password"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
          style="min-width: 0px;"
        >
          <label />
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input t-input--prefix"
            >
              <span
                class="t-input__prefix"
              >
                <svg
                  class="t-icon t-icon-lock-on"
                  version="1.1"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M512 192C444.5208448 192 389.23743232 244.21617856 384.35108736 310.44721024L384 320 320 320C320 213.961328 405.961328 128 512 128 614.25157632 128 697.8342976 207.93087744 703.6740672 308.71854144L704 320 782.7692288 320C809.9586368 320 832 352.74717248 832 393.14285696L832 758.8571456C832 799.2528256 809.9586368 832 782.7692288 832L241.23076928 832C214.0413664 832 192 799.2528256 192 758.8571456L192 393.14285696C192 352.74717248 214.0413664 320 241.23076928 320L640 320C640 249.307552 582.692448 192 512 192ZM768 384L256 384 256 768 768 768 768 384ZM544.70655104 511.92788736L544.70655104 703.9278848 480.70655104 703.9278848 480.70655104 511.92788736 544.70655104 511.92788736Z"
                    fill-opacity=".9"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <input
                class="t-input__inner"
                placeholder="请输入密码"
                type="password"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__undefined"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
          style="min-width: 0px;"
        >
          <label />
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base t-size-full-width"
              type="submit"
              value=""
            >
              登录
            </button>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`validator.jsx 1`] = `
<DocumentFragment>
  <div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-row t-form-item__account"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            用户名
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          >
            这里请填写用户名
          </span>
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__password"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            密码
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          >
            这里请填写密码
          </span>
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__email"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            邮箱
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__gender"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            性别
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-radio-group t-radio-group-solid t-radio-group-medium"
            >
              <label
                class="t-radio"
              >
                <input
                  class="t-radio__former"
                  name="male"
                  readonly=""
                  type="radio"
                  value=""
                />
                <span
                  class="t-radio__input"
                />
                <span
                  class="t-radio__label"
                >
                  男
                </span>
              </label>
              <label
                class="t-radio"
              >
                <input
                  class="t-radio__former"
                  name="femal"
                  readonly=""
                  type="radio"
                  value=""
                />
                <span
                  class="t-radio__input"
                />
                <span
                  class="t-radio__label"
                >
                  女
                </span>
              </label>
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__course"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            课程
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-form-check-group"
            >
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  name="1"
                  readonly=""
                  type="checkbox"
                  value=""
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  语文
                </span>
              </label>
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  name="2"
                  readonly=""
                  type="checkbox"
                  value=""
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  数学
                </span>
              </label>
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  name="3"
                  readonly=""
                  type="checkbox"
                  value=""
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  英语
                </span>
              </label>
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  name="4"
                  readonly=""
                  type="checkbox"
                  value=""
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  体育
                </span>
              </label>
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__date"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label>
            入学时间
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__content.url"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            个人网站
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__undefined"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label />
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="margin-right: 10px;"
              type="submit"
              value=""
            >
              提交
            </button>
            <button
              class="t-button t-button--theme-default t-button--variant-base"
              type="reset"
              value=""
            >
              重置
            </button>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`validatorStatus.jsx 1`] = `
<DocumentFragment>
  <div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-row t-form-item__fail"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            失败
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          >
            校验不通过，请输入正确内容
          </span>
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__warning"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            警告
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__success"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label>
            成功
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__failB"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            失败
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                placeholder="隐藏状态icon"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__warningB"
      >
        <div
          class="t-col t-form__label t-form__label--required t-form__label--right t-col-1"
        >
          <label>
            警告
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__loading"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label>
            加载中
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                placeholder="正在校验中，请稍等"
                value=""
              />
            </div>
            <span
              class="t-form__status"
            >
              <svg
                class="t-icon t-icon-loading"
                name="loading"
                style="color: rgb(24, 144, 255); font-size: 25px;"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__add"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label>
            新增
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
            <span
              class="t-form__status"
            >
              <svg
                class="t-icon t-icon-add-rectangle"
                name="add-rectangle"
                style="font-size: 25px;"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M192 128L832 128C867.3462208 128 896 156.653776 896 192L896 832C896 867.3462208 867.3462208 896 832 896L192 896C156.653776 896 128 867.3462208 128 832L128 192C128 156.653776 156.653776 128 192 128ZM192 192L832 192 832 832 192 832 192 192ZM544 288L543.936 480 736 480 736 544 543.936 544 544 736 480 736 479.936 544 288 544 288 480 479.936 480 480 288 544 288Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <span
            class="t-input__extra"
          >
            自定义新增icon
          </span>
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__help"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label>
            帮助
          </label>
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
            <span
              class="t-form__status"
            >
              <svg
                class="t-icon t-icon-help-circle"
                name="help-circle"
                style="font-size: 25px;"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM512 160C317.59576832 160 160 317.59576832 160 512 160 706.4042304 317.59576832 864 512 864 706.4042304 864 864 706.4042304 864 512 864 317.59576832 706.4042304 160 512 160ZM544 672L544 736 480 736 480 672 544 672ZM511.94934848 316.79357824C580.86566208 317.87753152 638.94855808 369.30255552 639.97972736 442.25242048 640.6040192 486.41802816 626.86304896 511.80632384 591.32161984 547.68326784L581.23240896 557.61406016C550.12829504 587.77674496 545.85718848 604.2392832 544.33294784 632.61727168L544.14543296 639.97426496 479.84877568 640C479.84877568 594.00480064 493.105152 564.48261312 529.43594048 527.7943712L539.69683072 517.6924928C572.34315648 486.03252928 576.87187904 472.9806432 576.43752576 442.25242048 575.80742976 397.67644416 547.8533504 380.3909248 512 380.3909248 478.19034496 380.3909248 459.7961696 389.55235008 450.58499584 420.97361536 449.55016384 424.503648 448.7590048 430.9195872 448.4281024 436.88934272L448.25864064 442.58695936 384 442.58695936C384 431.38724224 385.3298528 417.56690432 388.246704 407.6169056 403.89780352 354.22768704 455.376064 315.90376256 511.94934848 316.79357824Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <span
            class="t-input__extra"
          >
            自定义帮助icon
          </span>
        </div>
      </div>
      <div
        class="t-form__item t-row t-form-item__undefined"
      >
        <div
          class="t-col t-form__label t-form__label--right t-col-1"
        >
          <label />
        </div>
        <div
          class="t-form__controls t-col"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="margin-right: 10px;"
              type="submit"
              value=""
            >
              提交
            </button>
            <button
              class="t-button t-button--theme-default t-button--variant-base"
              type="reset"
              value=""
            >
              重置
            </button>
          </div>
          <span
            class="t-input__extra"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
